qt/gen_qgraphicswidget.nim

proc fQGraphicsWidget_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_dropEvent".}
proc fcQGraphicsWidget_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_dropEvent".}
proc fQGraphicsWidget_virtualbase_hoverEnterEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_hoverEnterEvent".}
proc fcQGraphicsWidget_override_virtual_hoverEnterEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_hoverEnterEvent".}
proc fQGraphicsWidget_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_keyPressEvent".}
proc fcQGraphicsWidget_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_keyPressEvent".}
proc fQGraphicsWidget_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_keyReleaseEvent".}
proc fcQGraphicsWidget_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_keyReleaseEvent".}
proc fQGraphicsWidget_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mousePressEvent".}
proc fcQGraphicsWidget_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mousePressEvent".}
proc fQGraphicsWidget_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mouseMoveEvent".}
proc fcQGraphicsWidget_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mouseMoveEvent".}
proc fQGraphicsWidget_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mouseReleaseEvent".}
proc fcQGraphicsWidget_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mouseReleaseEvent".}
proc fQGraphicsWidget_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mouseDoubleClickEvent".}
proc fcQGraphicsWidget_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mouseDoubleClickEvent".}
proc fQGraphicsWidget_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_wheelEvent".}
proc fcQGraphicsWidget_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_wheelEvent".}
proc fQGraphicsWidget_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_inputMethodEvent".}
proc fcQGraphicsWidget_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_inputMethodEvent".}
proc fQGraphicsWidget_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QGraphicsWidget_virtualbase_inputMethodQuery".}
proc fcQGraphicsWidget_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_inputMethodQuery".}
proc fQGraphicsWidget_virtualbase_supportsExtension(self: pointer, extension: cint): bool{.importc: "QGraphicsWidget_virtualbase_supportsExtension".}
proc fcQGraphicsWidget_override_virtual_supportsExtension(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_supportsExtension".}
proc fQGraphicsWidget_virtualbase_setExtension(self: pointer, extension: cint, variant: pointer): void{.importc: "QGraphicsWidget_virtualbase_setExtension".}
proc fcQGraphicsWidget_override_virtual_setExtension(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_setExtension".}
proc fQGraphicsWidget_virtualbase_extension(self: pointer, variant: pointer): pointer{.importc: "QGraphicsWidget_virtualbase_extension".}
proc fcQGraphicsWidget_override_virtual_extension(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_extension".}
proc fcQGraphicsWidget_staticMetaObject(): pointer {.importc: "QGraphicsWidget_staticMetaObject".}
proc fcQGraphicsWidget_delete(self: pointer) {.importc: "QGraphicsWidget_delete".}


func init*(T: type QGraphicsWidget, h: ptr cQGraphicsWidget): QGraphicsWidget =
  T(h: h)
proc create*(T: type QGraphicsWidget, ): QGraphicsWidget =

  QGraphicsWidget.init(fcQGraphicsWidget_new())
proc create*(T: type QGraphicsWidget, parent: gen_qgraphicsitem.QGraphicsItem): QGraphicsWidget =

  QGraphicsWidget.init(fcQGraphicsWidget_new2(parent.h))
proc create*(T: type QGraphicsWidget, parent: gen_qgraphicsitem.QGraphicsItem, wFlags: gen_qnamespace.WindowType): QGraphicsWidget =

  QGraphicsWidget.init(fcQGraphicsWidget_new3(parent.h, cint(wFlags)))
proc metaObject*(self: QGraphicsWidget, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGraphicsWidget_metaObject(self.h))

proc metacast*(self: QGraphicsWidget, param1: cstring): pointer =

  fcQGraphicsWidget_metacast(self.h, param1)

proc metacall*(self: QGraphicsWidget, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGraphicsWidget_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGraphicsWidget, s: cstring): string =

  let v_ms = fcQGraphicsWidget_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QGraphicsWidget, s: cstring): string =

  let v_ms = fcQGraphicsWidget_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc layout*(self: QGraphicsWidget, ): gen_qgraphicslayout.QGraphicsLayout =

  gen_qgraphicslayout.QGraphicsLayout(h: fcQGraphicsWidget_layout(self.h))

proc setLayout*(self: QGraphicsWidget, layout: gen_qgraphicslayout.QGraphicsLayout): void =

  fcQGraphicsWidget_setLayout(self.h, layout.h)

proc adjustSize*(self: QGraphicsWidget, ): void =

  fcQGraphicsWidget_adjustSize(self.h)

proc layoutDirection*(self: QGraphicsWidget, ): gen_qnamespace.LayoutDirection =

  gen_qnamespace.LayoutDirection(fcQGraphicsWidget_layoutDirection(self.h))

proc setLayoutDirection*(self: QGraphicsWidget, direction: gen_qnamespace.LayoutDirection): void =

  fcQGraphicsWidget_setLayoutDirection(self.h, cint(direction))

proc unsetLayoutDirection*(self: QGraphicsWidget, ): void =

  fcQGraphicsWidget_unsetLayoutDirection(self.h)

proc style*(self: QGraphicsWidget, ): gen_qstyle.QStyle =

  gen_qstyle.QStyle(h: fcQGraphicsWidget_style(self.h))

proc setStyle*(self: QGraphicsWidget, style: gen_qstyle.QStyle): void =

  fcQGraphicsWidget_setStyle(self.h, style.h)

proc font*(self: QGraphicsWidget, ): gen_qfont.QFont =

  gen_qfont.QFont(h: fcQGraphicsWidget_font(self.h))

proc setFont*(self: QGraphicsWidget, font: gen_qfont.QFont): void =

  fcQGraphicsWidget_setFont(self.h, font.h)

proc palette*(self: QGraphicsWidget, ): gen_qpalette.QPalette =

  gen_qpalette.QPalette(h: fcQGraphicsWidget_palette(self.h))

proc setPalette*(self: QGraphicsWidget, palette: gen_qpalette.QPalette): void =

  fcQGraphicsWidget_setPalette(self.h, palette.h)

proc autoFillBackground*(self: QGraphicsWidget, ): bool =

  fcQGraphicsWidget_autoFillBackground(self.h)

proc setAutoFillBackground*(self: QGraphicsWidget, enabled: bool): void =

  fcQGraphicsWidget_setAutoFillBackground(self.h, enabled)

proc resize*(self: QGraphicsWidget, size: gen_qsize.QSizeF): void =

  fcQGraphicsWidget_resize(self.h, size.h)

proc resize2*(self: QGraphicsWidget, w: float64, h: float64): void =

  fcQGraphicsWidget_resize2(self.h, w, h)

proc size*(self: QGraphicsWidget, ): gen_qsize.QSizeF =

  gen_qsize.QSizeF(h: fcQGraphicsWidget_size(self.h))

proc setGeometry*(self: QGraphicsWidget, rect: gen_qrect.QRectF): void =

  fcQGraphicsWidget_setGeometry(self.h, rect.h)

proc setGeometry2*(self: QGraphicsWidget, x: float64, y: float64, w: float64, h: float64): void =

  fcQGraphicsWidget_setGeometry2(self.h, x, y, w, h)

proc rect*(self: QGraphicsWidget, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsWidget_rect(self.h))

proc setContentsMargins*(self: QGraphicsWidget, left: float64, top: float64, right: float64, bottom: float64): void =

  fcQGraphicsWidget_setContentsMargins(self.h, left, top, right, bottom)

proc setContentsMarginsWithMargins*(self: QGraphicsWidget, margins: gen_qmargins.QMarginsF): void =

  fcQGraphicsWidget_setContentsMarginsWithMargins(self.h, margins.h)

proc getContentsMargins*(self: QGraphicsWidget, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void =

  fcQGraphicsWidget_getContentsMargins(self.h, left, top, right, bottom)

proc setWindowFrameMargins*(self: QGraphicsWidget, left: float64, top: float64, right: float64, bottom: float64): void =

  fcQGraphicsWidget_setWindowFrameMargins(self.h, left, top, right, bottom)

proc setWindowFrameMarginsWithMargins*(self: QGraphicsWidget, margins: gen_qmargins.QMarginsF): void =

  fcQGraphicsWidget_setWindowFrameMarginsWithMargins(self.h, margins.h)

proc getWindowFrameMargins*(self: QGraphicsWidget, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void =

  fcQGraphicsWidget_getWindowFrameMargins(self.h, left, top, right, bottom)

proc unsetWindowFrameMargins*(self: QGraphicsWidget, ): void =

  fcQGraphicsWidget_unsetWindowFrameMargins(self.h)

proc windowFrameGeometry*(self: QGraphicsWidget, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsWidget_windowFrameGeometry(self.h))

proc windowFrameRect*(self: QGraphicsWidget, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsWidget_windowFrameRect(self.h))

proc windowFlags*(self: QGraphicsWidget, ): gen_qnamespace.WindowType =

  gen_qnamespace.WindowType(fcQGraphicsWidget_windowFlags(self.h))

proc windowType*(self: QGraphicsWidget, ): gen_qnamespace.WindowType =

  gen_qnamespace.WindowType(fcQGraphicsWidget_windowType(self.h))

proc setWindowFlags*(self: QGraphicsWidget, wFlags: gen_qnamespace.WindowType): void =

  fcQGraphicsWidget_setWindowFlags(self.h, cint(wFlags))

proc isActiveWindow*(self: QGraphicsWidget, ): bool =

  fcQGraphicsWidget_isActiveWindow(self.h)

proc setWindowTitle*(self: QGraphicsWidget, title: string): void =

  fcQGraphicsWidget_setWindowTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title))))

proc windowTitle*(self: QGraphicsWidget, ): string =

  let v_ms = fcQGraphicsWidget_windowTitle(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc focusPolicy*(self: QGraphicsWidget, ): gen_qnamespace.FocusPolicy =

  gen_qnamespace.FocusPolicy(fcQGraphicsWidget_focusPolicy(self.h))

proc setFocusPolicy*(self: QGraphicsWidget, policy: gen_qnamespace.FocusPolicy): void =

  fcQGraphicsWidget_setFocusPolicy(self.h, cint(policy))

proc setTabOrder*(_: type QGraphicsWidget, first: QGraphicsWidget, second: QGraphicsWidget): void =

  fcQGraphicsWidget_setTabOrder(first.h, second.h)

proc focusWidget*(self: QGraphicsWidget, ): QGraphicsWidget =

  QGraphicsWidget(h: fcQGraphicsWidget_focusWidget(self.h))

proc grabShortcut*(self: QGraphicsWidget, sequence: gen_qkeysequence.QKeySequence): cint =

  fcQGraphicsWidget_grabShortcut(self.h, sequence.h)

proc releaseShortcut*(self: QGraphicsWidget, id: cint): void =

  fcQGraphicsWidget_releaseShortcut(self.h, id)

proc setShortcutEnabled*(self: QGraphicsWidget, id: cint): void =

  fcQGraphicsWidget_setShortcutEnabled(self.h, id)

proc setShortcutAutoRepeat*(self: QGraphicsWidget, id: cint): void =

  fcQGraphicsWidget_setShortcutAutoRepeat(self.h, id)

proc addAction*(self: QGraphicsWidget, action: gen_qaction.QAction): void =

  fcQGraphicsWidget_addAction(self.h, action.h)

proc addActions*(self: QGraphicsWidget, actions: seq[gen_qaction.QAction]): void =
